--- a/index.html
+++ b/index.html
@@ -99,12 +99,33 @@
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
             <heading>Preprints</heading>
-
           </td>
 
         </tr>
       </tbody></table>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+       <tr>
+            <td style="padding:10px;width:100%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2310.02664">
+                <papertitle>On Memorization in Diffusion Models</papertitle>
+              </a>
+              <br>
+              <strong>Xiangming Gu</strong>,
+              <a href="https://duchao0726.github.io">Chao Du</a>&dagger;,
+              <a href="https://p2333.github.io">Tianyu Pang</a>&dagger;,
+              <a href="https://zhenxuan00.github.io">Chongxuan Li</a>,
+              <a href="http://linmin.me">Min Lin</a>,
+              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
+              <br>
+              <em>Preprints</em>, 2023.
+              <br>
+              <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
+              <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
+              <p>We first show that the theoretical optimum of denoising score matching can only replicate training data, which contradicts the generalization ability of state-of-the-art diffusion models. Then we explore the conditions under which trained diffusion models will demonstrate the similar memorization behaviors as well as the influential factors from three facets of data distribution, model configuration, and training procedure. Intriguingly, we find that conditioning training data on uninformative random labels can significantly trigger the memorization in diffusion models.</p>
+              <p></p>
+            </td>
+          </tr>
+
         <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
               <a href="https://arxiv.org/pdf/2304.12082.pdf">
@@ -115,7 +136,7 @@
               <a href="https://smcnus.github.io">Wei Zeng</a>,
               <a href="https://smcnus.github.io">Jianan Zhang</a>,
               <a href="https://www.oulongshen.xyz">Longshen Ou</a>,
-              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
               <br>
               <em>Preprints</em>, 2023.
               <br>
@@ -174,7 +195,7 @@
             <a href="https://scholar.google.com/citations?user=4QtVJoEAAAAJ">Wei Wei</a>,
             <strong>Xiangming Gu</strong>,
             <a href="https://ieeexplore.ieee.org/author/37275635600">Xiaohong Guan</a>,
-            <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+            <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
             <br>
             IEEE Transactions on Audio, Speech and Language Processing (<em>TASLP</em>'2023). (<i>Impact factor: 4.364</i>)
             <br>
@@ -195,7 +216,7 @@
             <br>
             <strong>Xiangming Gu</strong>,
             <a href="https://smcnus.github.io">Wei Zeng</a>,
-            <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+            <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
             <br>
             ACM International Conference on Multimedia (<em>MM</em>'2023), Ottawa, Canada.
             <br>
@@ -234,7 +255,7 @@
               <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>*,
               <strong>Xiangming Gu</strong>,
               <a href="http://www.wanghao.in">Hao Wang</a>,
-              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
               <br>
               Transactions on Machine Learning Research (<em>TMLR</em>'2022).
               <br>
@@ -255,12 +276,12 @@
                   <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Fast Training-free Test-time Adaptation</papertitle>
                 </a>
                 <br>
-                <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>,
+                <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>&dagger;,
                 <strong>Xiangming Gu</strong>,
                 <a href="http://www.wanghao.in">Hao Wang</a>,
                 <a href="https://smcnus.github.io">Chang Xiao</a>,
                 <a href="https://waffle-liu.github.io">Hongfu Liu</a>,
-                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                 <br>
                 Advances in Neural Information Processing Systems (<em>NeurIPS</em>'2022), New Orleans, USA.
                 <br>
@@ -284,7 +305,7 @@
                 <br>
                 <a href="https://www.oulongshen.xyz">Longshen Ou</a>*,
                 <strong>Xiangming Gu</strong>*,
-                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                 <br>
                 International Society for Music Information Retrieval Conference (<em>ISMIR</em>'2022), Bengaluru, India.
                 <br>
@@ -308,7 +329,7 @@
                 <strong>Xiangming Gu</strong>*,
                 <a href="https://www.oulongshen.xyz">Longshen Ou</a>*,
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
-                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                 <br>
                 ACM International Conference on Multimedia (<em>MM</em>'2022). (<font color="red"><i>Oral, Top Paper Award</i></font>), Lisbon, Portugal.
                 <br>
@@ -334,7 +355,7 @@
                 </a>
                 <br>
                 <a href="https://scholar.google.com/citations?user=NksnxhwAAAAJ&hl=zh-CN">Youze Xue</a>, 
-                <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=zh-CN">Jiansheng Chen</a>,  
+                <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=zh-CN">Jiansheng Chen</a>&dagger;,  
                 <strong>Xiangming Gu</strong>,
                 <a href="https://scholar.google.com/citations?user=32hwVLEAAAAJ&hl=en">Huimin Ma</a>,
                 <a href="http://web.ee.tsinghua.edu.cn/mahongbing/en/index.htm">Hongbing Ma</a>
@@ -373,7 +394,7 @@
               <a href="https://scholar.google.com/citations?user=JlilfjsAAAAJ&hl=zh-CN">Boyu Zhang</a>, 
               <a href="https://www.researchgate.net/scientific-contributions/Penghui-Yang-2149548367">Penghui Yang</a>,  
               <strong>Xiangming Gu</strong>,
-              <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>
+              <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>&dagger;
               <br>
                IEEE/RSJ International Conference on Intelligent Robots and Systems (<em>IROS</em>'2021), Virtual.
                <br>
