--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
           <td style="padding:10px;width:100%;vertical-align:middle">
             <heading>Preprints</heading>
           </td>
-
         </tr>
       </tbody></table>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -133,8 +132,8 @@
               </a>
               <br>
               <strong>Xiangming Gu</strong>,
-              <a href="https://smcnus.github.io">Wei Zeng</a>,
-              <a href="https://smcnus.github.io">Jianan Zhang</a>,
+              <a href="https://scholar.google.com/citations?hl=zh-CN&user=Ffq7lrcAAAAJ">Wei Zeng</a>,
+              <a href="https://www.linkedin.com/in/jianan-zhang-a9014a173/?originalSubdomain=cn">Jianan Zhang</a>,
               <a href="https://www.oulongshen.xyz">Longshen Ou</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
               <br>
@@ -215,15 +214,15 @@
             </a>
             <br>
             <strong>Xiangming Gu</strong>,
-            <a href="https://smcnus.github.io">Wei Zeng</a>,
+            <a href="https://scholar.google.com/citations?hl=zh-CN&user=Ffq7lrcAAAAJ">Wei Zeng</a>,
             <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
             <br>
             ACM International Conference on Multimedia (<em>MM</em>'2023), Ottawa, Canada.
             <br>
             <a href="pdf/ACMMM2023.pdf">pdf</a> /
-            <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a>
-            <!-- <a href="data/wei2022unsupervised.bib">bibtex</a> / -->
-            <!-- <a href="https://github.com/weiwei-ww/ML-VAE">code</a> -->
+            <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a> /
+            <a href="https://youtu.be/lMQE7hQlTCQ">video</a> /
+            <a href="pdf/ACMMM2023_poster.pdf">poster</a>
             <p></p>
             <!-- <p>We first attempted the fairness topic within the singing-centric deep learning community. We presented evidence that Singing Voice Transcription (SVT) systems demonstrate female superiority. To tackle this, we proposed a note-conditioned adversarial learning approach to mitigate this gender bias in SVT and offer better fairness-utility trade-offs.</p> -->
           </td>
