--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a third-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                My research interests include two directions: (i) foundmental research in machine learning, e.g. diffusion models and large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning, and trustworthy machine learning, to singing/speech techniques.
+                My research interests include two directions: (i) foundmental research related to diffusion models and large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation), and trustworthy machine learning (fairness, memorization), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -209,7 +209,7 @@
           <img src="images/arxiv2022.png" width="160" height="160">
         </td> -->
           <td style="padding:10px;width:100%;vertical-align:middle">
-            <a href="https://arxiv.org/abs/2308.02898">
+            <a href="https://dl.acm.org/doi/10.1145/3581783.3612272">
               <papertitle>Elucidate Gender Fairness in Singing Voice Transcription</papertitle>
             </a>
             <br>
