--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a third-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                My research interests include two directions: (i) foundmental research related to diffusion models and large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation), and trustworthy machine learning (fairness, memorization), to singing/speech techniques.
+                My research interests include two directions: (i) trustworthy machine learning for diffusion models and (multimodal) large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation, fairness), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -487,9 +487,9 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for ICCV2023, AISTATS2021
+                  Conference reviewer for ECCV2024, IJCAI2024, ICCV2023, AISTATS2021
                   <br>
-                  Journal reviewer for RA-L
+                  Journal reviewer for TASLP, RA-L
                 </td>
               </tr>
               
@@ -530,7 +530,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated October 2023.
+                Last Updated January 2024.
               </p>
             </td>
           </tr>
