--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <ul>
             <li>
-              <strong>[2024.02]</strong>: We released <a href="">Agent Smith</a>, my first project on Large Language Models (LLMs)!
+              <strong>[2024.02]</strong>: We released <a href="https://arxiv.org/abs/2402.08567">Agent Smith</a> &#128293, my first project on Large Language Models (LLMs)!
           </li>
             <li>
               <strong>[2023.09]</strong>: One paper got accepted to IEEE Transactions on Audio, Speech and Language Processing (<i>TASLP</i>'2023)!
