update TOMM paper

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <strong>[2023.07]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>MM</i>'2023)!
           </li>
             <li>
-              <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research topic is diffusion model!
+              <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research is related to generative models and (multimodal) large language models!
           </li>
             <!-- <li>
               <strong>[2023.03]</strong>: I was invited to be a reviewer for International Conference on Computer Vision (<i>ICCV</i>'2023)!
@@ -200,7 +200,7 @@
             <a href="https://arxiv.org/pdf/2402.08567.pdf">pdf</a> /
             <a href="https://sail-sg.github.io/Agent-Smith/">project page</a> /
             <a href="https://github.com/sail-sg/Agent-Smith">code</a> /
-            <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">WIRED</a>
+            <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">press</a>
             <!-- <p>We present <i>infectious jailbreak</i>, which entails the adversary simply jailbreaking a single agent, and without any further intervention from the adversary, (almost) all agents will become infected exponentially fast and exhibit harmful behaviors. Our results show that feeding an (infectious) adversarial image into the memory of any randomly chosen agent is sufficient to achieve infectious jailbreak in multi-agent environments containing up to <i>one million</i> LLaVA-1.5 agents. Finally, we derive a simple principle for determining whether a defense mechanism can provably restrain the spread of infectious jailbreak.</p> -->
             <p></p>
           </td>
@@ -211,7 +211,7 @@
             <img src="images/arxiv2022.png" width="160" height="160">
           </td> -->
             <td style="padding:10px;width:100%;vertical-align:middle">
-              <a href="">
+              <a href="https://dl.acm.org/doi/10.1145/3651310">
                 <papertitle>Automatic Lyric Transcription and Automatic Music Transcription from Multimodal Singing</papertitle>
               </a>
               <br>
@@ -224,7 +224,7 @@
               <br>
               ACM Transactions on Multimedia Computing Communications and Applications (<em>TOMM</em>'2024).
               <br>
-              <a href="">ACM document</a> /
+              <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">pdf</a> /
               <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a>
               <p></p>
             </td>
