--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
               ACM Transactions on Multimedia Computing Communications and Applications (<em>TOMM</em>'2024).
               <br>
               <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">pdf</a> /
-              <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a>
+              <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a> /
+              <a href="https://zenodo.org/records/10814703">data</a>
               <p></p>
             </td>
           </tr>
@@ -411,6 +412,7 @@
                 <!-- <a href="data/gu2022mm.bib">bibtex</a> / -->
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM_ALT">code</a> /
+                <a href="https://zenodo.org/records/7545968">data</a> /
                 <a href="https://youtu.be/3eA62RYROq0">video</a> /
                 <a href="https://www.comp.nus.edu.sg/news/features/2023-marvellous-richness-wye/">press</a>
                 <p></p>
