--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
               <p>I am a third-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                My research interests include two directions: (i) fundamental research for generative models and (multimodal) large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation, fairness), to singing/speech techniques.
+                I am also a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>. I am mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and working closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
+              </p>
+              <p>
+                My research interests include two directions: (i) fundamental research for generative models, (multimodal) large language models and AI agents; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation, fairness), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -61,9 +64,9 @@
             <li>
               <strong>[2023.07]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>MM</i>'2023)!
           </li>
-            <li>
+            <!-- <li>
               <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research is related to generative models and (multimodal) large language models!
-          </li>
+          </li> -->
             <!-- <li>
               <strong>[2023.03]</strong>: I was invited to be a reviewer for International Conference on Computer Vision (<i>ICCV</i>'2023)!
           </li> -->
@@ -590,6 +593,8 @@
             
             <tr>
               <td width="100%" valign="center">
+                Teaching Assistant, CS6212, Topics in Media, Spring 2024
+                <br>
                 Teaching Assistant, CS5242, Neural Networks and Deep Learning, Spring 2023
                 <br>
                 Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
@@ -610,7 +615,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated March 2024.
+                Last Updated April 2024.
               </p>
             </td>
           </tr>
