--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
           <ul>
             <li>
+              <strong>[2024.05]</strong>: One paper got accepted to International Conference on Machine Learning (<i>ICML</i>'2024)!
+            </li>
+            <li>
               <strong>[2024.02]</strong>: One paper got accepted to ACM Transactions on Multimedia Computing Communications and Applications (<i>TOMM</i>'2024)!
             </li>
             <li>
@@ -209,7 +212,9 @@
             <a href="http://www.mysmu.edu/faculty/jingjiang/">Jing Jiang</a>&dagger;,
             <a href="http://linmin.me">Min Lin</a>
             <br>
-            International Conference on Learning Representations Workshop on Large Language Model Agents (<em>LLMAgents @  ICLR</em>'2024), Vienna, Austria
+            International Conference on Machine Learning (<em>ICML</em>'2024), Vienna, Austria.
+            <br>
+            Also in International Conference on Learning Representations Workshop on Large Language Model Agents (<em>LLMAgents @  ICLR</em>'2024).
             <br>
             <a href="https://arxiv.org/pdf/2402.08567.pdf">pdf</a> /
             <a href="https://sail-sg.github.io/Agent-Smith/">project page</a> /
