--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
             <br>
             Also in International Conference on Learning Representations Workshop on Large Language Model Agents (<em>LLMAgents @  ICLR</em>'2024).
             <br>
-            <a href="https://arxiv.org/pdf/2402.08567.pdf">pdf</a> /
+            <a href="pdf/ICML2024.pdf">ICML</a> /
+            <a href="https://openreview.net/pdf?id=qsVKqEkre3">ICLR workshop</a> /
             <a href="https://sail-sg.github.io/Agent-Smith/">project page</a> /
             <a href="https://github.com/sail-sg/Agent-Smith">code</a> /
+            <a href="pdf/ICLR2024_workshop_poster.pdf">ICLR poster</a> /
             <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">press</a>
             <!-- <p>We present <i>infectious jailbreak</i>, which entails the adversary simply jailbreaking a single agent, and without any further intervention from the adversary, (almost) all agents will become infected exponentially fast and exhibit harmful behaviors. Our results show that feeding an (infectious) adversarial image into the memory of any randomly chosen agent is sufficient to achieve infectious jailbreak in multi-agent environments containing up to <i>one million</i> LLaVA-1.5 agents. Finally, we derive a simple principle for determining whether a defense mechanism can provably restrain the spread of infectious jailbreak.</p> -->
             <p></p>
@@ -575,7 +577,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
+                  Conference reviewer for NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
                   <br>
                   Journal reviewer for TASLP, RA-L
                 </td>
@@ -620,7 +622,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated April 2024.
+                Last Updated May 2024.
               </p>
             </td>
           </tr>
