--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
             <a href="https://openreview.net/pdf?id=qsVKqEkre3">ICLR workshop</a> /
             <a href="https://sail-sg.github.io/Agent-Smith/">project page</a> /
             <a href="https://github.com/sail-sg/Agent-Smith">code</a> /
-            <a href="pdf/ICLR2024_workshop_poster.pdf">ICLR poster</a> /
+            <a href="https://youtu.be/_UHudWD9lmY">video</a> /
+            <a href="pdf/ICML2024_slides.pdf">slides</a> /
+            <a href="pdf/ICML2024_poster.pdf">poster</a> /
             <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">press</a>
             <!-- <p>We present <i>infectious jailbreak</i>, which entails the adversary simply jailbreaking a single agent, and without any further intervention from the adversary, (almost) all agents will become infected exponentially fast and exhibit harmful behaviors. Our results show that feeding an (infectious) adversarial image into the memory of any randomly chosen agent is sufficient to achieve infectious jailbreak in multi-agent environments containing up to <i>one million</i> LLaVA-1.5 agents. Finally, we derive a simple principle for determining whether a defense mechanism can provably restrain the spread of infectious jailbreak.</p> -->
             <p></p>
@@ -600,6 +602,8 @@
             
             <tr>
               <td width="100%" valign="center">
+                Teaching Assistant, CS4347/CS5647, Sound and Music Computing, Fall 2024
+                <br>
                 Teaching Assistant, CS6212, Topics in Media, Spring 2024
                 <br>
                 Teaching Assistant, CS5242, Neural Networks and Deep Learning, Spring 2023
@@ -622,7 +626,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated May 2024.
+                Last Updated July 2024.
               </p>
             </td>
           </tr>
