--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 I am also a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>. I am mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and working closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                My research interests include two directions: (i) fundamental research for generative models, (multimodal) large language models and AI agents; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning (domain adaptation, fairness), to singing/speech techniques.
+                My research interests include two directions: (i) fundamental research for generative models [<a href="https://arxiv.org/pdf/2310.02664">Arxiv'2023</a>], (multimodal) large language models and AI agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>]; (ii) application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
