--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
                 <a href="pdf/Xiangming_Gu_Resume.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://openreview.net/profile?id=~Xiangming_Gu1">Openreview</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/xiangming-gu/">Linkedin</a> &nbsp/&nbsp
                 <a href="https://twitter.com/gu_xiangming">Twitter</a> &nbsp/&nbsp
@@ -39,7 +39,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/XiangmingGu.JPG"><img style="width:50%;max-width:50%" alt="profile photo" src="images/XiangmingGu.JPG" class="hoverZoomLink"></a>
+              <a href="images/XiangmingGu.JPG"><img style="width:75%;max-width:75%" alt="profile photo" src="images/XiangmingGu.JPG" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
