--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                   <br>
                   Visiting Undergraduate Student Scholarship, Tsinghua University, 2020
                   <br>
-                  Zheng Geru Scholarship, Tsinghua University, 2018
+                  Tsinghua's Friend- Zheng Geru Scholarship, Tsinghua University, 2018
                 </td>
               </tr>
               
@@ -579,7 +579,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
+                  Conference reviewer for EMNLP 2024, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
                   <br>
                   Journal reviewer for TASLP, RA-L
                 </td>
