--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
           <ul>
             <li>
+              <strong>[2024.07]</strong>: I received Dean's Graduate Research Excellence Award from School of Computing, NUS!
+            </li>
+            <li>
               <strong>[2024.05]</strong>: One paper got accepted to International Conference on Machine Learning (<i>ICML</i>'2024)!
             </li>
             <li>
@@ -74,7 +77,7 @@
               <strong>[2023.03]</strong>: I was invited to be a reviewer for International Conference on Computer Vision (<i>ICCV</i>'2023)!
           </li> -->
             <li>
-              <strong>[2023.01]</strong>: I received the Research Achievement Award from School of Computing, NUS!
+              <strong>[2023.01]</strong>: I received Research Achievement Award from School of Computing, NUS!
           </li>
           <li>
               <strong>[2022.12]</strong>: One paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2022)!
@@ -547,6 +550,8 @@
               
               <tr>
                 <td width="100%" valign="center">
+                  Dean's Graduate Research Excellence Award, National University of Singapore, 2024
+                  <br>
                   Research Incentive Award, National University of Singapore, 2023
                   <br>
                   Research Achievement Award, National University of Singapore, 2022
