--- a/index.html
+++ b/index.html
@@ -473,6 +473,32 @@
                 <!-- <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p> -->
               </td>
             </tr>
+
+            <tr>
+              <!-- <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/tip2022.png" width="160" height="160">
+              </td> -->
+                <td style="padding:10px;width:100%;vertical-align:middle">
+                  <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">
+                    <papertitle>Spring-reinforced pneumatic actuator and soft robotic applications</papertitle>
+                  </a>
+                  <br>
+                  <a href="https://scholar.google.com/citations?user=JlilfjsAAAAJ&hl=zh-CN">Boyu Zhang</a>, 
+                  <strong>Xiangming Gu</strong>,
+                  Jiayuan Liu, 
+                  Jingyi Kang, 
+                  Chengquan Hu,
+                  <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>;
+                  <br>
+                  Smart Materials and Structures (2024).
+                  <br>
+                  <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">IOP Science</a>
+                  <!-- <a href="data/xue2022boost.bib">bibtex</a> / -->
+                  <!-- <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a> -->
+                  <p></p>
+                  <!-- <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p> -->
+                </td>
+              </tr>
             
           <tr>
           <!-- <td style="padding:20px;width:25%;vertical-align:middle">
@@ -584,7 +610,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for EMNLP 2024, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
+                  Conference reviewer for ICLR2025, ACL ARR 2024, EMNLP 2024, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2021
                   <br>
                   Journal reviewer for TASLP, RA-L
                 </td>
