--- a/index.html
+++ b/index.html
@@ -216,6 +216,33 @@
           </tr>
 
           <tr>
+            <!-- <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/neurips2022.png" width="160" height="137">
+            </td> -->
+              <td style="padding:10px;width:100%;vertical-align:middle">
+                <a href="https://openreview.net/forum?id=wiHzQWwg3l">
+                  <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Fast Training-free Test-time Adaptation</papertitle>
+                </a>
+                <br>
+                <a href="https://sites.google.com/view/huanghengguan/homepage">Hengguan Huang</a>&dagger;,
+                <strong>Xiangming Gu</strong>,
+                <a href="http://www.wanghao.in">Hao Wang</a>,
+                <a href="https://smcnus.github.io">Chang Xiao</a>,
+                <a href="https://waffle-liu.github.io">Hongfu Liu</a>,
+                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
+                <br>
+                Annual Conference on Neural Information Processing Systems (<em>NeurIPS</em>'2022), New Orleans, USA.
+                <br>
+                <a href="pdf/NeurIPS2022.pdf">pdf</a> /
+                <!-- <a href="data/huang2022.bib">bibtex</a> / -->
+                <a href="https://github.com/guxm2021/ECBNN">code /
+                <a href="https://recorder-v3.slideslive.com/?share=76177&s=cd597422-3109-42f3-9072-dfef5c351a4d">video</a>
+                <!-- <p></p> -->
+                <!-- <p>We incorporated the mechanism of internel preditive modeling into unsupervised domain adaptation (UDA) approaches to handle non-stationary streaming data and achieve training-free test-time adaptation with low latency. Our extrapolative continuous-time Bayesian neural network (ECBNN) exceeds UDA baselines on both synthetic and real-world data.</p> -->
+              </td>
+            </tr>
+
+          <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
               <u>Machine Learning Applications to Speech/Singing</u>
             </td>
@@ -472,6 +499,32 @@
               <!-- <p></p> -->
             </td>
           </tr>
+
+          <tr>
+            <!-- <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/tip2022.png" width="160" height="160">
+            </td> -->
+              <td style="padding:10px;width:100%;vertical-align:middle">
+                <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">
+                  <papertitle>Spring-reinforced pneumatic actuator and soft robotic applications</papertitle>
+                </a>
+                <br>
+                <a href="https://scholar.google.com/citations?user=JlilfjsAAAAJ&hl=zh-CN">Boyu Zhang</a>, 
+                <strong>Xiangming Gu</strong>,
+                Jiayuan Liu, 
+                Jingyi Kang, 
+                Chengquan Hu,
+                <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>
+                <br>
+                Smart Materials and Structures (2024).
+                <br>
+                <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">IOP Science</a>
+                <!-- <a href="data/xue2022boost.bib">bibtex</a> / -->
+                <!-- <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a> -->
+                <!-- <p></p> -->
+                <!-- <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p> -->
+              </td>
+            </tr>
   
       <!-- </tbody></table>
       
@@ -689,32 +742,6 @@
                 <!-- <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p> -->
               </td>
             </tr>
-
-            <tr>
-              <!-- <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/tip2022.png" width="160" height="160">
-              </td> -->
-                <td style="padding:10px;width:100%;vertical-align:middle">
-                  <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">
-                    <papertitle>Spring-reinforced pneumatic actuator and soft robotic applications</papertitle>
-                  </a>
-                  <br>
-                  <a href="https://scholar.google.com/citations?user=JlilfjsAAAAJ&hl=zh-CN">Boyu Zhang</a>, 
-                  <strong>Xiangming Gu</strong>,
-                  Jiayuan Liu, 
-                  Jingyi Kang, 
-                  Chengquan Hu,
-                  <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>
-                  <br>
-                  Smart Materials and Structures (2024).
-                  <br>
-                  <a href="https://iopscience.iop.org/article/10.1088/1361-665X/ad74bf">IOP Science</a>
-                  <!-- <a href="data/xue2022boost.bib">bibtex</a> / -->
-                  <!-- <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a> -->
-                  <!-- <p></p> -->
-                  <!-- <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p> -->
-                </td>
-              </tr>
             
           <tr>
           <!-- <td style="padding:20px;width:25%;vertical-align:middle">
